# shadowvault-protocol

./: .env.example  .gitignore  19_DAY_WINNING_PLAN.md  ARCHITECTURE.md  ARCIUM_ACCESS_APPLICATION.md  ARCIUM_STATUS.md  Anchor.toml  COMPLETION_SUMMARY.md  Cargo.toml  DEMO_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  ELITE_UI_COMPLETE.md  FINAL_FIXED_INSTRUCTIONS.md  FINAL_SUBMISSION_CHECKLIST.md  FINAL_VERIFICATION.md  FRONTEND_COMPLETE.md  GITHUB_REPOSITORY_SETUP.md  HACKATHON_READY.md  HACKATHON_SUBMISSION.md  HACKATHON_SUBMISSION_FORM.md  HOW_TO_RUN_IN_PLAYGROUND.md  IMPLEMENTATION_SUMMARY.md  LANDING_PAGE_ENHANCEMENTS.md  PLAYGROUND_TEST_FIXED.ts  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_SUBMISSION.md  ROADMAP.md  SOLANA_PLAYGROUND_CLIENT.ts  SOLANA_PLAYGROUND_FIXED.rs  SOLANA_PLAYGROUND_FIXES.md  SOLANA_PLAYGROUND_lib.rs  SUBMISSION.md  SUBMISSION_CHECKLIST.md  SUBMISSION_FORM_TEMPLATE.md  client-simple.ts  next.config.mjs  (+4 more)
app/: client.ts  globals.css  layout.tsx  package.json  page.tsx
archive/: ARCIUM_STATUS.md  FINAL_INSTRUCTIONS.md  FRONTEND_TRANSFORMATION.md  GITHUB_UPLOAD_GUIDE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY_CHECKLIST.md  (+2 more)
encrypted-ixs/: Cargo.toml  README.md
encrypted-ixs/src/: lib.rs
programs/shadowvault/: Cargo.toml
programs/shadowvault/src/: errors.rs  lib.rs  state.rs
programs/shadowvault/src/instructions/: deposit.rs  execute_trade.rs  initialize.rs  mod.rs  pause_vault.rs  submit_trade_intent.rs  withdraw.rs
programs/shadowvault_mxe/: Cargo.toml
programs/shadowvault_mxe/src/: lib.rs
(+102 files in other folders)
