[package]
name = "encrypted-ixs"
version = "0.1.0"
edition = "2021"
description = "Encrypted instruction data structures for ShadowVault using Arcium MPC"
license = "MIT"

[dependencies]
# Arcium MPC SDK for encrypted computation
arcium-mpc-sdk = "0.1"

[dev-dependencies]

[lib]
crate-type = ["lib"]
