[package]
name = "shadowvault"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["ShadowVault Protocol <dev@shadowvault.io>"]

[lib]
name = "shadowvault"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
solana-program = "1.18.23"
